// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render page slot correctly 1`] = `
<nav role="navigation"
     class="r-pagination"
>
  <ul class="r-pagination__items">
    <li class="r-pagination__item r-pagination__item--prev r-hairline--surround">
      <button type="button">
        Previous
      </button>
    </li>
    <li class="r-pagination__item r-pagination__item--page r-hairline--surround">
      <button type="button">
        foo 1
      </button>
    </li>
    <li class="r-pagination__item r-pagination__item--page r-hairline--surround">
      <button type="button">
        foo 2
      </button>
    </li>
    <li class="r-pagination__item r-pagination__item--page r-hairline--surround">
      <button type="button">
        foo 3
      </button>
    </li>
    <li class="r-pagination__item r-pagination__item--page r-hairline--surround">
      <button type="button">
        foo 4
      </button>
    </li>
    <li class="r-pagination__item r-pagination__item--page r-hairline--surround">
      <button type="button">
        foo 5
      </button>
    </li>
    <li class="r-pagination__item r-pagination__item--next r-hairline--surround">
      <button type="button">
        Next
      </button>
    </li>
  </ul>
</nav>
`;

exports[`should render prev-text、next-text slot correctly 1`] = `
<nav role="navigation"
     class="r-pagination"
>
  <ul class="r-pagination__items">
    <li class="r-pagination__item r-pagination__item--prev r-hairline--surround">
      <button type="button">
        Custom PrevText
      </button>
    </li>
    <li class="r-pagination__item r-pagination__item--page r-hairline--surround">
      <button type="button">
        1
      </button>
    </li>
    <li class="r-pagination__item r-pagination__item--page r-hairline--surround">
      <button type="button">
        2
      </button>
    </li>
    <li class="r-pagination__item r-pagination__item--page r-hairline--surround">
      <button type="button">
        3
      </button>
    </li>
    <li class="r-pagination__item r-pagination__item--page r-hairline--surround">
      <button type="button">
        4
      </button>
    </li>
    <li class="r-pagination__item r-pagination__item--page r-hairline--surround">
      <button type="button">
        5
      </button>
    </li>
    <li class="r-pagination__item r-pagination__item--next r-hairline--surround">
      <button type="button">
        Custom NextText
      </button>
    </li>
  </ul>
</nav>
`;
